--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"src/**/*.scss\" \"src/**/*.html\"" 
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\" \"src/**/*.scss\" \"src/**/*.html\""
   },
   "private": true,
   "dependencies": {
@@ -19,11 +19,14 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@primeng/themes": "^20.3.0",
     "chart.js": "^4.5.1",
+    "ngx-toastr": "^19.1.0",
     "prettier": "^3.6.2",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.0",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.1"
